scaling-eks/vpc/route_table.tf
# route table
resource "aws_route_table" "cluster_public" {
  vpc_id = aws_vpc.tuna-infra.id

  route {
    cidr_block = "0.0.0.0/0"
    gateway_id = aws_internet_gateway.eks.id
  }

  tags = {
    Name = "main"
  }
}

resource "aws_route_table" "cluster_private" {
  vpc_id = aws_vpc.tuna-infra.id

  route {
    cidr_block = "0.0.0.0/0"
    gateway_id = aws_nat_gateway.public_1.id
  }

  tags = {
    Name = "main"
  }
}

resource "aws_route_table" "db_private" {
  vpc_id = aws_vpc.tuna-infra.id

  tags = {
    Name = "main"
  }
}

# route table association
resource "aws_route_table_association" "public_1" {
  subnet_id      = aws_subnet.public_1.id
  route_table_id = aws_route_table.cluster_public.id
}

resource "aws_route_table_association" "public_2" {
  subnet_id      = aws_subnet.public_2.id
  route_table_id = aws_route_table.cluster_public.id
}

resource "aws_route_table_association" "public_3" {
  subnet_id      = aws_subnet.public_3.id
  route_table_id = aws_route_table.cluster_public.id
}

resource "aws_route_table_association" "private_1" {
  subnet_id      = aws_subnet.private_1.id
  route_table_id = aws_route_table.cluster_private.id
}

resource "aws_route_table_association" "private_2" {
  subnet_id      = aws_subnet.private_2.id
  route_table_id = aws_route_table.cluster_private.id
}

resource "aws_route_table_association" "private_3" {
  subnet_id      = aws_subnet.private_3.id
  route_table_id = aws_route_table.cluster_private.id
}

# db
resource "aws_route_table_association" "db_private_1" {
  subnet_id      = aws_subnet.db_private_1.id
  route_table_id = aws_route_table.db_private.id
}

resource "aws_route_table_association" "db_private_2" {
  subnet_id      = aws_subnet.db_private_2.id
  route_table_id = aws_route_table.db_private.id
}

resource "aws_route_table_association" "db_private_3" {
  subnet_id      = aws_subnet.db_private_3.id
  route_table_id = aws_route_table.db_private.id
}
